tests/data/placebo/test_mq_query/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "Description": "default VPC security group",
        "GroupName": "default",
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "IpRanges": [],
            "Ipv6Ranges": [],
            "PrefixListIds": [],
            "UserIdGroupPairs": [
              {
                "GroupId": "sg-aa6c90c3",
                "UserId": "644160558196"
              }
            ]
          }
        ],
        "OwnerId": "644160558196",
        "GroupId": "sg-aa6c90c3",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": [],
            "UserIdGroupPairs": []
          }
        ],
        "Tags": [
          {
            "Key": "NetworkLocation",
            "Value": "Private"
          }
        ],
        "VpcId": "vpc-5f6c9936"
      }
    ],
    "ResponseMetadata": {}
  }
}
